--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -117,6 +117,7 @@ environments:
       SDS_SKIP_SORT_DURATION: 1
       #SDS_NO_INDEX_DROP: 1              # Do not delete any indices, just issue a warning instead
       SDS_SKIP_SSAW: 1
+      DA_GITA_EXAMPLE: 1
   - name: test-main
     cron: '7 * * * *'
     command_prefix: '/usr/bin'
