--- a/sources/example/lg.yaml
+++ b/sources/example/lg.yaml
@@ -1,4 +1,6 @@
 ---
+# SH=1 DBG=1 DRY='' ./docker-images/run_sds.sh test
+# SDS_SKIP_ES_DATA=1 SDS_SKIP_ES_LOG=1 SDS_DEBUG=2 SDS_CMDDEBUG=2 SDS_ONLY_P2O=1 SDS_SKIP_AFFS='' SDS_SKIP_DATA='' SDS_DRY_RUN='' syncdatasources 2>&1 | tee -a /sds.log
 native:
   slug: lg
 data_sources:
