--- a/sources/example/lg.yaml
+++ b/sources/example/lg.yaml
@@ -21,7 +21,11 @@ data_sources:
         - '(?i)csqconv'
         - '(?i)test'
       - name: Others
-        skip: ['(?i)(csqconv|test)']
+        skip: ['(?i)(csqconv|test|meczyk|contributors)']
+      - self: true
+        only: ['(?i)meczyk']
+      - name: Fallback
+        default: true
   config:
   - name: from-date
     value: '2019-06-01'
