Split out pipermail
Signed-off-by: Łukasz Gryglicki <lukaszgryglicki@o2.pl>

--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -141,7 +141,7 @@ environments:
       SDS_SCROLL_SIZE: 500
       SDS_ES_BULKSIZE: 500
       SDS_TASKS_SKIP_RE: '(project1-bugzilla|project1-gerrit|project1-rocketchat)'
-      SDS_DATASOURCES_SKIP_RE: '^(slack|googlegroups)'
+      SDS_DATASOURCES_SKIP_RE: '^(slack|googlegroups|pipermail)'
       SDS_SKIP_SSAW: 1
       # DA_GIT_DROP_RICH: 1
       # DA_GIT_DROP_RAW: 1
@@ -156,7 +156,7 @@ environments:
       SDS_SILENT: 1
       SDS_ES_BULKSIZE: 100
       SDS_TASKS_RE: '(project1-bugzilla|project1-gerrit|project1-rocketchat|academy-software-foundation-openshadinglanguage-github)'
-      SDS_DATASOURCES_SKIP_RE: '^(slack|googlegroups)'
+      SDS_DATASOURCES_SKIP_RE: '^(slack|googlegroupsi|pipermail)'
       SDS_SKIP_SSAW: 1
   - name: test-googlegroups
     cron: '11 * * * *'
@@ -167,5 +167,16 @@ environments:
     env:
       SDS_SILENT: 1
       SDS_DATASOURCES_RE: '^googlegroups'
+      SDS_NCPUS_SCALE: 0.5
+      SDS_SKIP_SSAW: 1
+  - name: test-pipermail
+    cron: '12 * * * *'
+    command_prefix: '/usr/bin'
+    csv_prefix: '/root'
+    cron_env: 'PATH=$PATH:/snap/bin'
+    temp_dir: '/tmp'
+    env:
+      SDS_SILENT: 1
+      SDS_DATASOURCES_RE: '^pipermail'
       SDS_NCPUS_SCALE: 0.5
       SDS_SKIP_SSAW: 1
