--- a/docker-images/Dockerfile.nop2o
+++ b/docker-images/Dockerfile.nop2o
@@ -1,20 +1,6 @@
 FROM golang:1.15 AS builder
 ARG BRANCH
 RUN apt-get update -y && apt-get upgrade -y && apt-get install -y ca-certificates openssh-client git curl make
-RUN go get -u gopkg.in/yaml.v2
-RUN go get -u golang.org/x/oauth2
-RUN go get -u golang.org/x/text/transform
-RUN go get -u golang.org/x/text/unicode/norm
-RUN go get -u github.com/json-iterator/go
-RUN go get -u github.com/LF-Engineering/dev-analytics-libraries/auth0
-RUN go get -u github.com/LF-Engineering/dev-analytics-libraries/elastic
-RUN go get -u github.com/LF-Engineering/dev-analytics-libraries/http
-RUN go get -u github.com/LF-Engineering/dev-analytics-libraries/slack
-RUN go get -u github.com/google/go-github/github
-RUN go get -u github.com/PuerkitoBio/goquery
-RUN go get -u github.com/avast/retry-go
-RUN go get -u github.com/dgrijalva/jwt-go
-RUN go get -u github.com/google/uuid
 WORKDIR /go/src/github.com/LF-Engineering
 RUN git clone https://github.com/LF-Engineering/da-ds
 RUN git clone https://github.com/LF-Engineering/sync-data-sources
@@ -30,17 +16,15 @@ RUN git pull
 RUN make -f ./Makefile dockerinstall
 FROM alpine
 RUN apk update && apk add bash git ca-certificates openssh-client perl && rm -rf /var/cache/apk/*
-COPY --from=builder /go/src/github.com/LF-Engineering/sync-data-sources/docker-images/.gitconfig /root/.gitconfig
-COPY --from=builder /go/src/github.com/LF-Engineering/sync-data-sources/docker-images/scripts/*.sh /
+COPY docker-images/.gitconfig /root/.gitconfig
+COPY docker-images/scripts/*.sh /
 COPY --from=builder /go/bin/syncdatasources /usr/bin/
 COPY --from=builder /go/bin/dads /usr/bin/
 COPY --from=builder /go/bin/gitops /usr/bin/
-# NOTE: do we need this line?
-#COPY --from=builder /go/src/github.com/LF-Engineering/sync-data-sources/sources/data.zip /data.zip
-# NOTE: where can I find this file?
-#COPY --from=builder /go/src/github.com/LF-Engineering/sync-data-sources/sources/detect-removed-commits.sh /usr/bin/
+COPY sources/data.zip /data.zip
+COPY sources/detect-removed-commits.sh /usr/bin/
 #COPY sources/sds.yaml /data/sds.txt
-COPY --from=builder /go/src/github.com/LF-Engineering/sync-data-sources/docker-images/.vimrc /root/.vimrc
+COPY docker-images/.vimrc /root/.vimrc
 RUN git clone "https://github.com/AlDanial/cloc.git" --branch "v1.90" --single-branch
 RUN cp /cloc/cloc /usr/bin
 CMD /bin/bash
