--- a/sources/sds-deployment.yaml
+++ b/sources/sds-deployment.yaml
@@ -152,6 +152,26 @@ environments:
       SDS_NCPUS_SCALE: 0.5
       SDS_SKIP_SSAW: 1
       SDS_SKIP_AFFS: 1
+  - name: prod-git
+    cron: '*/10 * * * *'                # it means that task will attempt to sync every 10 minutes, but will skip when another SDS instance related to this deployment (prod-main) runs
+    command_prefix: '/usr/bin'          # Next few vars are just our EC2 instances specific
+    csv_prefix: '/root'
+    cron_env: 'PATH=$PATH:/snap/bin'
+    temp_dir: '/tmp'
+    env:                                # List of all possible SDS env variables is here: https://github.com/LF-Engineering/sync-data-sources/blob/master/sources/context.go#L12
+      SDS_SILENT: 1
+      SDS_TASK_TIMEOUT_SECONDS: 43200
+      SDS_NCPUS_SCALE: 1.5              # attempt to create 1.5 * number of CPU cores tasks for this deployment
+      SDS_SCROLL_SIZE: 500
+      SDS_ES_BULKSIZE: 500
+      SDS_TASKS_SKIP_RE: '^sds-(lfn-odl-gerrit|open-mainframe-project|accord|acrn|allseen|alljoyn|act|agl|bitcoin-protocol|cc|CC|cephfoundation|chaoss|ojsf-chassis|chips|cip|clusterduck|cni|caf|ccc|cdf|cord-datacenter|cord-central-office-re-architected-as-a-datacenter|cregit|datapractices|dent|desktopwg|easycla|elisa|finops|finos|fossbazaar|frr|gql|internet-security-research-group|interuss|iovisor|janusgraph|kernelci|openkinetic|laminas|lets-encrypt|lf-asia-llc|lfph|lsb|linuxboot|llvmlinux|ltsi|lvfs|mapzen|mojaglobal|newticity|onf|O3DE|o3de|a11y|open-alliance-for-cloud-adoption|opencontainers|open-network-operating-system-onos|osecc|osapa|ova|open-voice-network|ovs|openbel|openbmc|openchain|OEEW|oeew|openfabrics-inc|openhpc|ojsf|openmama|openmessaging|openpowerfoundation|opensds|osquery|patentcommons|quartermaster|rcons|real-time-linux|redteam|rtdb|riscv|risc-v-international|sel4|soda-foundation|sof|tlf|openssf|reactive|tizen|ucf|korg|cncf)-'   # specifying which tasks should be skipped, can be something like '^sds-(foundation1|foundation2|...|foundationN)-'
+      SDS_DATASOURCES_RE: '^git'
+      SDS_SKIP_AFFS: 1
+      # SDS_DYNAMIC_OAUTH: 1
+      # SDS_SKIP_CHECK_FREQ: 1
+      SDS_SKIP_SSAW: 1
+      DA_GIT_ALLOW_FAIL: 1
+      DA_AFFS_API_FAIL_FATAL: 1
 - name: test                            # this will run on the 'test' env
   deployments:
   - name: test-master
